--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 name: Fernando González Cortés
 permalink: /blog/:year/:month/:day/:title
 markdown: kramdown
-highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
