--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 name: Fernando González Cortés
 permalink: /blog/:year/:month/:day/:title
 markdown: kramdown
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
+theme: minima
