--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username:  fergonco
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
 exclude:
   - Gemfile
